--- a/web/src/index.html
+++ b/web/src/index.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Генератор паролей</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Password</title>
+    <script type="module" crossorigin src="../javascript/index.js"></script>
+    <link rel="stylesheet" crossorigin href="../css/index.css">
 </head>
 <body>
     <div class="container">
-        <h1>Генератор паролей</h1>
-        <label for="length">Длина пароля:</label>
-        <input type="number" id="length" min="1" max="1024" value="36">
+        <label for="length">Длина пароля - </label>
+        <input type="number" id="length" min="1" max="1000000" value="36">
         <br>
         <button onclick="generatePassword()">Сгенерировать пароль</button>
         <div class="password" id="password"></div>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
