--- a/web/src/index.html
+++ b/web/src/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password</title>
-    <script type="module" crossorigin src="../javascript/index.js"></script>
-    <link rel="stylesheet" crossorigin href="../css/index.css">
+    <script src="../javascript/index.js"></script>
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
     <div class="container">
         <label for="length">Длина пароля - </label>
         <input type="number" id="length" min="1" max="1000000" value="36">
         <br>
-        <button onclick="generatePassword()">Сгенерировать пароль</button>
+        <button onclick="generatePassword()" aria-label="Сгенерировать пароль">Сгенерировать пароль</button>
         <div class="password" id="password"></div>
     </div>
 </body>
