--- a/web/src/index.html
+++ b/web/src/index.html
@@ -12,7 +12,7 @@
         <label for="length">Длина пароля - </label>
         <input type="number" id="length" min="1" max="1000000" value="36">
         <br>
-        <button onclick="generatePassword()" aria-label="Сгенерировать пароль">Сгенерировать пароль</button>
+        <button onclick="generatePassword()">Сгенерировать пароль</button>
         <div class="password" id="password"></div>
     </div>
 </body>
