--- a/web/src/index.html
+++ b/web/src/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password</title>
-    <script src="../javascript/index.js"></script>
     <link rel="stylesheet" href="../css/index.css">
+    <script src="../javascript/index.js" defer></script>
 </head>
 <body>
     <div class="container">
-        <label for="length">Длина пароля - </label>
-        <input type="number" id="length" min="1" max="1000000" value="36">
+        <label for="length">Длина пароля:</label>
+        <input type="number" id="length" min="1" max="100" value="12">
         <br>
         <button onclick="generatePassword()">Сгенерировать пароль</button>
-        <div class="password" id="password"></div>
+        <button onclick="copyPassword()">Копировать</button>
+        <div class="password-container">
+            <div class="password" id="password"></div>
+        </div>
     </div>
 </body>
 </html>
