--- a/web/src/index.html
+++ b/web/src/index.html
@@ -10,11 +10,11 @@
 <body>
     <div class="container">
         <label for="length">Длина пароля:</label>
-        <input type="number" id="length" min="1" max="100" value="12">
+        <input type="number" id="length" min="1" max="1000000" value="36">
         <br>
         <button onclick="generatePassword()">Сгенерировать пароль</button>
         <button onclick="copyPassword()">Копировать</button>
-        <div class="password-container">
+        <div class="password-window">
             <div class="password" id="password"></div>
         </div>
     </div>
