--- a/web/src/index.html
+++ b/web/src/index.html
@@ -10,11 +10,11 @@
 <body>
     <div class="container">
         <label for="length">Длина пароля:</label>
-        <input type="number" id="length" min="1" max="1000000" value="36">
+        <input type="text" id="length" inputmode="numeric" pattern="\d*" placeholder="Введите длину" value="0">
         <br>
         <button onclick="generatePassword()">Сгенерировать пароль</button>
-        <button onclick="copyPassword()">Копировать</button>
-        <div class="password-window">
+        <button id="copyButton" onclick="copyPassword()">Копировать</button>
+        <div class="password-window" id="passwordWindow" style="display: none;">
             <div class="password" id="password"></div>
         </div>
     </div>
