--- a/web/src/index.html
+++ b/web/src/index.html
@@ -14,7 +14,7 @@
         <br>
         <button onclick="generatePassword()">Сгенерировать пароль</button>
         <button id="copyButton" onclick="copyPassword()">Копировать</button>
-        <div class="password-window" id="passwordWindow" style="display: none;">
+        <div class="password-window" id="passwordWindow">
             <div class="password" id="password"></div>
         </div>
     </div>
